# wintrae-1144

./: pyproject.toml  requirements.txt
doctidy/: cli.py  config.py  exporter.py  history.py  pdf_utils.py  utils.py
doctidy/commands/: check_cmd.py  classify_cmd.py  export_cmd.py  merge_cmd.py  rename_cmd.py  scan_cmd.py
test_docs/: 2024年2月财务报表.txt  2024年第一季度销售报告.txt  产品A规格说明.txt  采购合同_20240220_NO-2024-002.txt  重复文件_副本1.txt  销售合同_20240115_NO-2024-001.txt
test_docs/subdir/: 项目进度报告_20240301.txt
test_output/: report_no_details.json  report_no_details.md  report_with_details.md  v2_整理报告.json  v2_文件清单.json  整理报告.md  文件清单.csv  文件清单.xlsx
